v0.2.0 - add unit tests dir; begin updating deprecated api methods in speech libraries; updated readme; added unit testing dependencies; added pdf parsing functionality; updated manifest; added pom.xml for executing unit tests w/ maven; started adding logic to handle different types of html files (raw src code from github, actual html with html tags and doctype identifier)